--- a/html/1.5.html
+++ b/html/1.5.html
@@ -30,7 +30,7 @@
                     <h2>Хворостина Владислав Викторович</h2>
                 </div>
                 <div class="image">
-                    <img src="./images/31095-napisanie-prilozhenij-na-c-pod-vashi-zadachi.jpg" height="100" width="100" hspace="10" align="left">
+                    <img src="../assets/images/31095-napisanie-prilozhenij-na-c-pod-vashi-zadachi.jpg" height="100" width="100" hspace="10" align="left">
                 </div>
                 <div class="text">
                     <big>
