--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <li>
                 <div class="title">Задание 1</div>
                 <ul class="submenu">
-                    <li><a href="html/1.1.html">Обо мне</a></li>
-                    <li><a href="html/1.2.html">Стих</a></li>
+                    <li><a href="html/1.2.html">Обо мне</a></li>
+                    <li><a href="html/1.1.html">Стих</a></li>
                     <li><a href="html/1.3.html">Макет</a></li>
                     <li><a href="html/1.4.html">Макет со стихом</a></li>
                     <li><a href="html/1.5.html">Макет обо мне</a></li>
@@ -34,9 +34,9 @@
     </section>
     <section class="content">
         <div class="banners">
-            <a href="https://vk.com/nova_gc"><img src="../assets/images/vk.png"></a><br>
-            <a href="https://yandex.ru"><img src="../assets/images/yandex.webp"></a><br>
-            <a href="https://godville.net"><img src="../assets/images/s1200.jpg"></a>
+            <a href="https://vk.com/nova_gc"><img src="./assets/images/vk.png"></a><br>
+            <a href="https://yandex.ru"><img src="./assets/images/yandex.webp"></a><br>
+            <a href="https://godville.net"><img src="./assets/images/s1200.jpg"></a>
         </div>
         <div class="workspace">
             Меня зовут Йошикаге Кира. Мне 33 года. Мой дом находится в северо-восточной части Морио, где находятся все виллы, а я не замужем. Я работаю сотрудником в универмагах Kame Yu и возвращаюсь домой каждый день не позднее 8 вечера. Я не курю, но
@@ -44,7 +44,7 @@
                 Как ребенок, я просыпаюсь утром без усталости и стресса. Мне сказали, что не было никаких проблем при моей последней проверке. Я пытаюсь объяснить, что я человек, который хочет жить очень тихой жизнью. Я стараюсь не беспокоить себя какими-либо
                 врагами, такими как победа и поражение, которые заставили бы меня спать ночью. Вот как я общаюсь с обществом, и я знаю, что это приносит мне счастье. Хотя, если бы я сражался, я бы никому не проиграл.
         </div>
-        <div class="banners"><img id="kira" src="../assets/images/fff.png"></div>
+        <div class="banners"><img id="kira" src="./assets/images/fff.png"></div>
     </section>
     <section class="footer">
         <div class="copyright">
